add a shader handler class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ LINK_DIRECTORIES(
         ${GLFW3_LIBRARY_DIR}
 )
 
-set(SOURCE_FILES main.cpp hg-core/app/window.cpp hg-core/app/window.h)
+set(SOURCE_FILES main.cpp hg-core/app/window.cpp hg-core/app/window.h hg-core/graphics/shader/GLSLShader.cpp hg-core/graphics/shader/GLSLShader.h)
 add_executable(hg ${SOURCE_FILES})
 
 TARGET_LINK_LIBRARIES( hg
