--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ LINK_DIRECTORIES(
         ${GLFW3_LIBRARY_DIR}
 )
 
-set(SOURCE_FILES main.cpp hg-core/app/window.cpp hg-core/app/window.h hg-core/graphics/shader/GLSLShader.cpp hg-core/graphics/shader/GLSLShader.h hg-core/maths/maths.cpp hg-core/maths/maths.h)
+set(SOURCE_FILES main.cpp hg-core/app/window.cpp hg-core/app/window.h hg-core/graphics/shader/GLSLShader.cpp hg-core/graphics/shader/GLSLShader.h hg-core/maths/maths.cpp hg-core/maths/maths.h hg-core/graphics/shader/shader_str.cpp hg-core/graphics/shader/shader_str.h)
 add_executable(hg ${SOURCE_FILES})
 
 TARGET_LINK_LIBRARIES( hg
