add a timer class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,16 +6,21 @@ FIND_PACKAGE(OpenGL REQUIRED)
 IF(WIN32 OR WIN64)
     #TODO
 ELSE(WIN32 OR WIN64)
+    #add glew lib
     FIND_PACKAGE( GLEW REQUIRED)
+    #add glfw lib
     FIND_PACKAGE(PkgConfig REQUIRED)
     pkg_search_module(GLFW REQUIRED glfw3)
+    #add boost lib
+    FIND_PACKAGE(Boost COMPONENTS system filesystem REQUIRED)
 ENDIF(WIN32 OR WIN64)
 
 INCLUDE_DIRECTORIES(${GLFW3_INCLUDE_DIR}
                     ${OPENGL_INCLUDE_DIRS}
                     ${CMAKE_CURRENT_SOURCE_DIR}
                     ${GLEW_INCLUDE_PATH}
-                    ${PROJECT_SOURCE_DIR}/hg-core/ext)
+                    ${PROJECT_SOURCE_DIR}/hg-core/ext
+                    ${Boost_INCLUDE_DIRS})
 
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
@@ -25,10 +30,11 @@ LINK_DIRECTORIES(
         ${GLFW3_LIBRARY_DIR}
 )
 
-set(SOURCE_FILES main.cpp hg-core/app/window.cpp hg-core/app/window.h hg-core/graphics/shader/GLSLShader.cpp hg-core/graphics/shader/GLSLShader.h hg-core/maths/maths.cpp hg-core/maths/maths.h hg-core/graphics/shader/shader_str.cpp hg-core/graphics/shader/shader_str.h)
+set(SOURCE_FILES main.cpp hg-core/app/window.cpp hg-core/app/window.h hg-core/graphics/shader/GLSLShader.cpp hg-core/graphics/shader/GLSLShader.h hg-core/maths/maths.cpp hg-core/maths/maths.h hg-core/graphics/shader/shader_str.cpp hg-core/graphics/shader/shader_str.h hg-core/utils/timer/timer.cpp hg-core/utils/timer/timer.h)
 add_executable(hg ${SOURCE_FILES})
 
 TARGET_LINK_LIBRARIES( hg
                         ${OPENGL_LIBRARY}
                         ${GLEW_LIBRARY}
-                        ${GLFW_LIBRARIES})
+                        ${GLFW_LIBRARIES}
+                        ${Boost_LIBRARIES})
